# 04-nano

./: Makefile  README.md  config.json  hw4-nano.cabal  stack.yaml
.github/classroom/: .autograding.json.swp  autograding.json
src/Language/Nano/: Eval.hs  Lexer.x  Parser.y  Types.hs
tests/: Common.hs  Test.hs
tests/input/: t11.hs  t12.hs
