name:                hw4-nano
version:             0.1.0.0
synopsis:            Starter code for cse130 homework/04-nano
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -W -threaded
  exposed-modules:     Language.Nano.Types
                     , Language.Nano.Eval
                     , Language.Nano.Lexer
                     , Language.Nano.Parser

  -- other-extensions:
  build-depends:       array,
                       mtl,
                       base

  hs-source-dirs:      src
  build-tools:         happy, alex
  default-language:    Haskell2010
  
executable nano
  main-is:          Main.hs
  ghc-options:      -W -threaded
  hs-source-dirs:   bin  
  build-depends:    base,
                    mtl,
                    haskeline,
                    hw4-nano

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -threaded
  main-is:          Test.hs
  build-depends:    base,
                    directory,
                    filepath,
                    process,
                    random,
                    tasty,
                    tasty-hunit,
                    hw4-nano
